js bugfix, created test js file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /3_Formulare/nbproject/private/
 /4_CSS/nbproject/private/
 /5_JavaScriptBasics/nbproject/private/
+/NeuesProjekt/nbproject/private/
